vendor/registry-40351f815f426200/remain/tests/ui/let-stable.stderr
error: E::Bbb should sort before E::Ccc
  --> $DIR/let-stable.rs:17:9
   |
17 |         E::Bbb(_, _) => {}
   |         ^^^^^^
